Fix horizontal scroll & Toggle Scroll when side is open

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,16 @@
     background-image: linear-gradient(100.68deg, #4BC300 -19.35%, #336613 135.67%) !important;
 }
 
+::-webkit-scrollbar:horizontal {
+    height: 6px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+    border-radius: 10px;
+    background-image: linear-gradient(100.68deg, #4BC300 -19.35%, #336613 135.67%) !important;
+}
+
 * {
     margin: 0;
     padding: 0;
